# surfaceaudit

./: .dockerignore  .gitignore  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  example_config.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: surfaceaudit.yml
surfaceaudit/: __init__.py  __main__.py  assessor.py  classifier.py  cli.py  config.py  errors.py  history.py  models.py  report.py  watch.py
surfaceaudit/ai/: __init__.py  analyzer.py
surfaceaudit/enrichment/: __init__.py  base.py  cache.py  manager.py  score.py
surfaceaudit/notifications/: __init__.py  dispatcher.py  providers.py
surfaceaudit/output/: __init__.py  sarif.py
surfaceaudit/providers/: __init__.py  base.py  shodan.py
surfaceaudit/rules/: __init__.py  (+1 more)
tests/: __init__.py  test_ai_analyzer.py  test_assessor.py  test_classifier.py  test_cli.py  test_config_extended.py  test_enrichment_base.py  test_enrichment_cache.py  test_enrichment_manager.py  test_enrichment_providers.py  test_errors.py  test_history.py  test_notifications.py  test_prop_assessor.py  test_prop_classifier.py  test_prop_config.py  test_prop_enrichment.py  test_prop_history.py  test_prop_report.py  test_prop_retry.py  test_prop_v2_engine.py  test_prop_watch.py  test_providers.py  test_report.py  test_rich_ui.py  test_rule_engine.py  test_rule_schema.py  test_sarif.py  test_score.py  test_v2_dsl.py  test_v2_engine.py  test_v2_loader.py  test_v2_matchers.py  test_v2_schema.py  test_v2_template.py  test_v2_validator.py  test_watch.py
(+38 files in other folders)
